style.css
/* ... */
@media only screen and (max-width: 480px)  {
    .home-hero{
        background: linear-gradient(270deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.60) 00%), 
    url(Assets/feature.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 65vh;
    }
    .px-2{
        padding: 0rem 1rem;
    }
    .ml-5{
        margin-left: 0rem;
    }
    .nav-menu li a {
        font-size: 2.5rem;
    }
    .name-hero-container img{
        margin: 2rem;
        padding-top: 3rem;
    }
    .hero-subhead{
       margin: 0 1.25rem 0rem 1.25rem;
    }
    .hero-subhead h1{
        font-size: 2.5rem;
        margin-bottom: 0rem;
     }
     .hero-subhead h1 span{
        font-size: 2rem;
     }
     .hero-title-crawl{
        font-size: 1.75rem;
        padding:2rem 0rem 0rem 0rem;
        margin-top: 0rem;
     }
     .project{
        width: 95%;
        grid-template-columns: none;
     }
     .project img{
        display: none;
     }
    .project-name{
        font-size: 2.25rem;
        margin-left: 1rem;
        padding-right: 1rem;
    }
    .project-tags{
        font-size: 1rem;
        margin-left: 1rem;
        padding-right: 1rem;
        padding-top: 1rem;
    }
    .design-treat{
        padding: 0rem;
    }
    .dt-header{
        font-size: 2.4rem;
    }
    .about-me-paragraph{
        margin-bottom: 2rem;
    }
    .page-header{
        font-size: 5rem;
    }
    .friends-hero{
        width: 90%;
    }
    .friend-info{
        width: 50%;
        border-radius: 0 0 50px 0;
    }
    .friend-info h2{
        font-size: 2rem;
    }
    .friend-info p{
        display: none;
    }
    .friend-image{
        width: 50%;
    }
    .friend-image img{
        border-radius: 50px 0 0 0;
    }
    .friend-image .btn-blue{
        width: 9rem;
        font-size: .65rem;
    }
    .photo-hero{
        height: 35vh;
        margin-top: .5rem;
    }
    .photo-hero h1{
        font-size: 2.8rem;
    }
    .photo-hero h2{
        font-size: 2rem;
        margin-top: 3rem;
    }
    .gallery {
        display: block;
    }
    .gallery .photo-column {
        width: 100%;
    }
    .two-col-grid, .two-col-grid-wide, .two-col-grid-gap, .two-col-40-60, 
    .two-col-65-35, .two-col-65-35-wide, .three-col-grid, .three-col-grid-90,
    .about-container{
        grid-template-columns: 1fr;
    }
    .three-col-grid-90{
        width: 100%;
        margin-left: auto;
        margin-right: auto;
    }
    .two-col-65-35 div{
        max-width: 100%;
    }
    .big-text-italic{
        font-size: 2rem;
    }
    .width-60{
        width: 100%;
    }
    .pr-8{
        padding-right: 0rem;
    }
    .big-text{
        font-size: 3rem;
    }
    .center-button{
        width: 60%;
    }

    /* ou.edu/gradcollege */
    .web-personas{
        display: none;
    }

    /* Service Design */
    .p-sdb-final-product{
        margin-top: 1rem;
        margin-bottom: 2rem;
    }
    .div-sdb-number-pairing{
        margin-top: 0rem;
    }
    .div-sdb-number-pairing .big-number{
        font-size: 3rem;
        width: 2.25rem;
    }
    .div-sdb-number-pairing .medium-text{
        margin: auto 0rem;
        padding-left: 2rem;
    }
    .sdb-current-system >div.space-between{
        display: block;
    }
    .sdb-current-system > div > div > .big-number{
        font-size: 3rem;
        width: 2.25rem;
    }
    .sdb-current-system > div > div > .medium-text{
        padding-left: 2rem;
    }
    .sdb-ppaop{
        margin-top: 5rem;
    }
    .sdb-ppaop >div.space-between{
        display: block;
    }
    .sdb-ppaop > div > div > .big-number{
        font-size: 3rem;
        width: 2.25rem;
    }
    .sdb-ppaop > div > div > .big-text{
        padding-left: 4rem;
        font-size: 3rem;
        margin: auto 0rem auto 0rem;
    }
    .sdb-ppaop > div > div{
        margin-bottom: 1rem;
    }
    .section-header{
        font-size: 2rem;
        text-align: center;
        padding-bottom: 0rem;
    }
    .sdb-pp > div.width-60{
        width: 90%;
    }
    .sdb-oo{
        margin-top: 3rem;
        margin-bottom: 3rem;
    }
    .sdb-oo > div > p{
        margin-bottom: 2rem;
    }
    .sdb-oo > div > div > div > p{
        display: block;
        padding-right: 0rem;
    }
    .sdb-oo > div > div > .col-right{
        padding-left: 1rem;
    }

    /* Grad Portal */
    #portal-video{
        height: 13rem;
    }
    #blue-bars{
        height: 13rem;
        margin-bottom: 0rem;
    }
    #celebration-skyline{
        height: 10rem;
    }
    .portal-video-container{
        height: 20rem;
    }
    .portal-mockup-container > img{
        margin-top: 2rem;
    }
    .caption{
        width: 90%;
    }

    /* Features */
    .project-details{
        grid-template-columns: 1fr;
    }
    .project-details p{
        font-size: 1rem;
    }
    .project-tag-white div{
        font-size: 1.25rem;
        margin: .5rem 1rem 0rem 0rem;
    }
    .project-date{
        text-align: left;
        font-size:2rem;
        margin-top: 1rem;
    }

    /* footer */
    footer{
        margin: 3rem auto 0rem auto;
        padding: 0rem;
        height: fit-content;
    }
    footer > div > div{
        margin: 3rem 0rem 0rem 0rem;
        padding: 1rem;
    }
    footer > div > div > div.width-75{
        width: 100%;
    }
    .footer-contact{
        font-size: 4rem;
    }

    #footer-buttons{
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: auto;
    }
    #footer-buttons a{
        margin-bottom: 1rem;
    }

}








/* Font Faces */
/* Ade Display */
@font-face {
    font-family: 'Ade Display';
    src: url(Fonts/AdeDisplay.otf) format("opentype");
}

/* DM Sans */
@font-face {
    font-family: 'DM Sans Light';
    src: url(Fonts/DMSans-Light.ttf) format("truetype");
}
@font-face {
    font-family: 'DM Sans Extra Light Italic';
    src: url(Fonts/DMSans-ExtraLightItalic.ttf) format("truetype");
}
/* ... */

